user internal api to filter ticket